--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cheerio": "0.15.0",
     "fs-plus": "^2.0.0",
     "highlights": "1.4.1",
-    "javascript-state-machine": "^2.4.0"
+    "javascript-state-machine": "^2.4.0",
+    "jquery": "^3.1.1"
   },
   "devDependencies": {
     "electron-prebuilt": "^1.4.6",
